Fix top level spacing in uiMockups.html

--- a/assets/css/modules/_deliverables.scss
+++ b/assets/css/modules/_deliverables.scss
@@ -93,6 +93,7 @@ Deliverables Section Styles
 
 #ui-mockups-anchor {
   top: -80px;
+  margin-top: 80px;
 }
 
 #sitemap-toplevel-anchor {
